--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "reservas-mesas",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1"
+  },
   "devDependencies": {
-    "vite": "^7.2.4"
+    "vite": "^5.0.0"
   }
 }
